force-app/main/default/objects/ccrz__E_PriceGroupAccount__c/ccrz__E_PriceGroupAccount__c.object-meta.xml
<CustomObject>
    <description>Junction between Price Group and Account</description>
    <label>CC Price Group Account</label>
    <nameField>
        <displayFormat>PGA-{0000000000}</displayFormat>
        <label>CC Price Group Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Price Group Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>