force-app/main/default/objects/ccrz__E_PriceGroupAccount__c/fields/ccrz__Account__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Account__c</fullName>
    <description>Lookup to related Account object.</description>
    <inlineHelpText>Lookup to related Account object.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CC Price Group Accounts</relationshipLabel>
    <relationshipName>PriceGroupAccounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>