force-app/main/default/objects/ccrz__E_PriceGroupAccount__c/fields/ccrz__EffectiveStart__c.field-meta.xml
<CustomField>
    <fullName>ccrz__EffectiveStart__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date at which this entry is takes effect</description>
    <inlineHelpText>Date at which this entry is takes effect</inlineHelpText>
    <label>Effective Start</label>
    <type>DateTime</type>
</CustomField>