force-app/main/default/objects/ccrz__E_PriceGroupAccount__c/fields/ccrz__Sequence__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Sequence__c</fullName>
    <description>Ordering of the price groups for an account</description>
    <inlineHelpText>Ordering of the price groups for an account</inlineHelpText>
    <label>Sequence</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>