force-app/main/default/objects/ccrz__E_PriceGroupAccount__c/fields/ccrz__Storefront__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Storefront__c</fullName>
    <description>Storefront to which this association applies.</description>
    <inlineHelpText>Storefront to which this association applies.</inlineHelpText>
    <label>Storefront</label>
    <length>255</length>
    <type>Text</type>
</CustomField>